# pi-torchreid

./: CLAUDE.md  README.md  greptile.json  pyproject.toml  setup.py
.github/: README.md
.github/workflows/: ci.yml
configs/: im_osnet_ain_x1_0_softmax_256x128_amsgrad_cosine.yaml  im_osnet_ibn_x1_0_softmax_256x128_amsgrad.yaml  im_osnet_x0_25_softmax_256x128_amsgrad.yaml  im_osnet_x0_5_softmax_256x128_amsgrad.yaml  im_osnet_x0_75_softmax_256x128_amsgrad.yaml  im_osnet_x1_0_softmax_256x128_amsgrad.yaml  im_osnet_x1_0_softmax_256x128_amsgrad_cosine.yaml  im_osnet_x1_0_veri_carla_softmax.yaml  im_r50_softmax_256x128_amsgrad.yaml  im_r50fc512_softmax_256x128_amsgrad.yaml
docs/: CI_CD.md  MODEL_ZOO.md  conf.py  user_guide.rst
docs/ongoing/: maintenance-plan.md  uv-migration-phase.md
docs/pkg/: data.rst  engine.rst  losses.rst  metrics.rst  models.rst  optim.rst  utils.rst
pi_torchreid/: __init__.py
pi_torchreid/data/: datamanager.py
pi_torchreid/data/datasets/: __init__.py  dataset.py
pi_torchreid/data/datasets/image/: __init__.py  cuhk01.py  cuhk03.py  cuhksysu.py  dukemtmcreid.py  grid.py  ilids.py  market1501.py  prid.py  sensereid.py  university1652.py  veri_carla.py  viper.py
pi_torchreid/data/datasets/video/: dukemtmcvidreid.py  ilidsvid.py  prid2011.py
pi_torchreid/data/transforms/: __init__.py  augmentations.py  names.py
pi_torchreid/data/transforms/backends/: __init__.py  torchvision_v2.py
pi_torchreid/engine/: __init__.py  engine.py
pi_torchreid/engine/image/: __init__.py  softmax.py  triplet.py
pi_torchreid/engine/video/: __init__.py  softmax.py  triplet.py
pi_torchreid/metrics/: __init__.py  accuracy.py  distance.py  rank.py
pi_torchreid/metrics/rank_cylib/: setup.py  test_cython.py
pi_torchreid/models/: __init__.py  densenet.py  inceptionresnetv2.py  inceptionv4.py  mobilenetv2.py  nasnet.py  osnet.py  osnet_ain.py  pcb.py  resnet.py  resnet_ibn_b.py  resnetmid.py  senet.py  shufflenetv2.py  squeezenet.py
pi_torchreid/optim/: lr_scheduler.py  optimizer.py
pi_torchreid/utils/: __init__.py  feature_extractor.py  loggers.py  logging_config.py  model_complexity.py  torchtools.py
pi_torchreid/utils/GPU-Re-Ranking/: gnn_reranking.py  main.py  utils.py
pi_torchreid/utils/GPU-Re-Ranking/extension/adjacency_matrix/: setup.py
projects/DML/: default_config.py  dml.py  im_osnet_x1_0_dml_256x128_amsgrad_cosine.yaml  main.py
projects/OSNet_AIN/: default_config.py  main.py  nas.yaml  osnet_child.py  osnet_search.py  softmax_nas.py
projects/attribute_recognition/: default_parser.py  main.py
projects/attribute_recognition/datasets/: __init__.py  dataset.py  pa100k.py
projects/attribute_recognition/models/: __init__.py  osnet.py
scripts/: default_config.py  main.py
tests/: __init__.py  conftest.py  test_cython_rank.py  test_data.py  test_engine.py  test_feature_extractor.py  test_losses.py  test_metrics.py  test_models.py  test_optim.py  test_torchvision_v2_backend.py  test_transforms.py  test_utils.py
tests/fixtures/: __init__.py  mock_datasets.py
tests/integration/: __init__.py  test_cython_equivalence.py
tools/: compute_mean_std.py  export.py  parse_test_res.py  visualize_actmap.py
torchreid/: __init__.py
torchreid/data/: __init__.py  datamanager.py  sampler.py  transforms.py
torchreid/data/datasets/: __init__.py  dataset.py
torchreid/data/datasets/image/: __init__.py  cuhk01.py  cuhk02.py  cuhk03.py  cuhksysu.py  dukemtmcreid.py  grid.py  ilids.py  market1501.py  msmt17.py  prid.py  sensereid.py  university1652.py  veri_carla.py  viper.py
torchreid/data/datasets/video/: __init__.py  dukemtmcvidreid.py  ilidsvid.py  mars.py  prid2011.py
torchreid/data/transforms/: __init__.py  augmentations.py  names.py
torchreid/data/transforms/backends/: __init__.py  base.py  torchvision_v2.py
torchreid/engine/: __init__.py  engine.py
torchreid/engine/image/: __init__.py  softmax.py  triplet.py
torchreid/engine/video/: __init__.py  softmax.py  triplet.py
torchreid/losses/: __init__.py  cross_entropy_loss.py  hard_mine_triplet_loss.py
torchreid/metrics/: __init__.py  accuracy.py  distance.py  rank.py
torchreid/metrics/rank_cylib/: test_cython.py
torchreid/models/: __init__.py  densenet.py  hacnn.py  inceptionresnetv2.py  inceptionv4.py  mlfn.py  mobilenetv2.py  mudeep.py  nasnet.py  osnet.py  osnet_ain.py  pcb.py  resnet.py  resnet_ibn_a.py  resnet_ibn_b.py  resnetmid.py  senet.py  shufflenet.py  shufflenetv2.py  squeezenet.py  xception.py
torchreid/optim/: __init__.py  lr_scheduler.py  optimizer.py  radam.py
torchreid/utils/: __init__.py  avgmeter.py  feature_extractor.py  loggers.py  logging_config.py  model_complexity.py  reidtools.py  rerank.py  tools.py  torchtools.py
torchreid/utils/GPU-Re-Ranking/: gnn_reranking.py  main.py  utils.py
torchreid/utils/GPU-Re-Ranking/extension/propagation/: setup.py
