[project]
name = "torchreid"
version = "1.4.0"
description = "A library for deep learning person re-ID in PyTorch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kaiyang Zhou"}]
keywords = ["Person Re-Identification", "Deep Learning", "Computer Vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.0",
    "cython>=3.0",
    "h5py>=3.0",
    "pillow>=10.0",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "matplotlib>=3.8",
    "tensorboard>=2.15",
    "yacs>=0.1.8",
    "gdown>=5.0",
    "imageio>=2.30",
    "chardet>=5.0",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
export = [
    "onnx>=1.12",
    "onnx-simplifier>=0.4",
    # Note: openvino-dev may not be available for all Python versions
    # Install manually if needed: pip install openvino-dev
]

[project.urls]
Homepage = "https://github.com/KaiyangZhou/deep-person-reid"
Documentation = "https://kaiyangzhou.github.io/deep-person-reid/"
Repository = "https://github.com/KaiyangZhou/deep-person-reid"

[build-system]
requires = ["setuptools>=61", "wheel", "cython>=0.29", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["torchreid*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # line length handled by formatter
    "C408",  # unnecessary dict call
    "N806",  # variable naming (domain conventions: mAP, CMC, N_sma, etc.)
    "SIM108", # forcing ternary operator (sometimes if else is more readable)
]

[tool.ruff.lint.per-file-ignores]
# Star imports and re-exports in package __init__.py (F403/F405/F401)
"torchreid/__init__.py" = ["F401"]
"torchreid/models/__init__.py" = ["F403", "F405", "F401"]
"torchreid/data/__init__.py" = ["F403", "F405", "F401"]
"torchreid/data/datasets/__init__.py" = ["F401"]
"torchreid/data/datasets/image/__init__.py" = ["F403", "F405", "F401"]
"torchreid/data/datasets/video/__init__.py" = ["F401"]
"torchreid/utils/__init__.py" = ["F403", "F405", "F401", "I001"]
"torchreid/engine/__init__.py" = ["F403", "F405", "F401"]
"torchreid/engine/image/__init__.py" = ["F401"]
"torchreid/engine/video/__init__.py" = ["F401"]
"torchreid/losses/__init__.py" = ["F403", "F405", "N802", "F401"]
"torchreid/metrics/__init__.py" = ["F403", "F405", "F401"]
"torchreid/optim/__init__.py" = ["F401"]
"projects/attribute_recognition/models/__init__.py" = ["F403", "F405"]
"torchreid/utils/GPU-Re-Ranking/gnn_reranking.py" = ["F403", "F405", "N803"]
"torchreid/utils/GPU-Re-Ranking/main.py" = ["F403", "F405"]
# YACS CfgNode as CN (N817)
"scripts/default_config.py" = ["N817"]
"projects/DML/default_config.py" = ["N817"]
"projects/OSNet_AIN/default_config.py" = ["N817"]
# PyTorch convention: functional as F (N812)
"torchreid/models/*.py" = ["N812"]
"torchreid/engine/engine.py" = ["N812"]
"torchreid/metrics/distance.py" = ["N812"]
"projects/DML/dml.py" = ["N812"]
"projects/OSNet_AIN/osnet_child.py" = ["N812", "N803"]
"projects/OSNet_AIN/osnet_search.py" = ["N812", "N803"]
"projects/attribute_recognition/models/osnet.py" = ["N812"]
"tools/visualize_actmap.py" = ["N812"]
# Domain naming: argument/class/function (N803, N802, N801)
"torchreid/models/osnet.py" = ["N803"]
"torchreid/models/osnet_ain.py" = ["N803"]
"torchreid/models/resnet_ibn_b.py" = ["N803"]
"torchreid/models/inceptionresnetv2.py" = ["N801", "N803"]
"torchreid/models/inceptionv4.py" = ["N801"]
"tools/parse_test_res.py" = ["N803"]
"torchreid/utils/GPU-Re-Ranking/utils.py" = ["N802"]
"torchreid/utils/model_complexity.py" = ["N802"]
# Additional domain naming (dataset/API conventions)
"torchreid/data/datasets/image/ilids.py" = ["N801"]
"torchreid/data/datasets/video/ilidsvid.py" = ["N801"]
"torchreid/utils/feature_extractor.py" = ["N812"]

[tool.ruff.lint.isort]
known-first-party = ["torchreid"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
